💄 changing color to fix contrast issue

--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,6 +1,6 @@
 $theme-colors: (
   primary:        #0f60ad,
-  secondary:      #4ac272,
+  secondary:      #33FFFF,
   black:          #000,
 );
 
